[modify]modify UI

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             </thead>
             <tbody id="t_body"></tbody>
         </table>
+        <p>以上資料僅供參考，資料來源：撿股讚</p>
         <script type="text/javascript">
             $.get({
               url: 'data.json',
